SFDC Automation/src/objects/RSM_BillingDetail__c.object
<CustomObject>
    <description>Object to capture RydeSmart billing information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Account</description>
        <inlineHelpText>Lookup field to the Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RSM Billing Details</relationshipLabel>
        <relationshipName>RSM_BillingDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_From_Date__c</fullName>
        <label>Bill From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Date__c</fullName>
        <label>Bill To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_rate__c</fullName>
        <label>Bill rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Number</label>
        <referenceTo>RSM_Contract__c</referenceTo>
        <relationshipLabel>RSM BillingDetails</relationshipLabel>
        <relationshipName>RSM_BillingDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lessee_Number__c</fullName>
        <label>Lessee Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSMBillingDetailID__c</fullName>
        <externalId>true</externalId>
        <label>RSMBillingDetailID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Billed_Amount__c</fullName>
        <label>Total Billed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit #</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>RSM BillingDetails</relationshipLabel>
        <relationshipName>RSM_BillingDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM BillingDetail</label>
    <nameField>
        <label>Customer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM BillingDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>